# Bitfinance-Defi-dApp_ICP

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
HACK_BECAUSE_OF_ALLOW_JS/bitfinance_frontend/: vite.config.js
HACK_BECAUSE_OF_ALLOW_JS/bitfinance_frontend/src/: App.js
HACK_BECAUSE_OF_ALLOW_JS/bitfinance_frontend/src/tests/: App.test.js
src/bitfinance_backend/: Cargo.toml  bitfinance_backend.did
src/bitfinance_backend/src/: lib.rs
src/bitfinance_frontend/: package.json  tsconfig.json  vite.config.js
src/bitfinance_frontend/src/: App.jsx  main.jsx
src/bitfinance_frontend/src/components/: Navbar.jsx  ThemeToggle.jsx
src/bitfinance_frontend/src/context/: AuthContext.jsx
src/bitfinance_frontend/src/pages/: Borrow.jsx  Dashboard.jsx  Home.jsx  Lend.jsx  Register.jsx  Stake.jsx  TransactionHistory.jsx  Yield.jsx
