[package]
name = "bitfinance_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
